# sw-renderer

./: .gitignore  CMakeLists.txt  build.bat  build_debug.bat
res/: 2cubes.mtl  icosphere.mtl
src/: arena.c  arena.h  cam.c  cam.h  err.h  macro.h  main.c  mesh.c  mesh.h  rstr.c  rstr.h  tgmath_fix.h  vecmath.h  wnd.c  wnd.h  wnd_glfw.c.disabled  wnd_glfw.h.disabled
